--- a/.drone.yml
+++ b/.drone.yml
@@ -29,6 +29,20 @@ steps:
       - |
         terraform init -input=false
 
+  - name: terraform-plan
+    pull: if-not-exists
+    image: hashicorp/terraform:1.2.5
+    environment:
+      AWS_REGION:
+        from_secret: AWS_REGION
+      AWS_ACCESS_KEY_ID:
+        from_secret: AWS_ACCESS_KEY_ID
+      AWS_SECRET_ACCESS_KEY:
+        from_secret: AWS_SECRET_ACCESS_KEY
+    commands:
+      - |
+        terraform plan -input=false
+
 trigger:
   event:
     exclude:
